--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,20 +40,16 @@ jobs:
       run: ./gradlew build
 
   bazel:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: nttld/setup-ndk@v1
-      id: setup-ndk
-      with:
-        ndk-version: r21d
+    - name: Set up Android
+      run: |
+          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "ndk;21.3.6528147" "system-images;android-28;default;x86" | grep -v = || true
+          echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/21.3.6528147" >> $GITHUB_ENV
     - name: Set up Bazelisk
       run: wget https://github.com/bazelbuild/bazelisk/releases/download/v1.7.4/bazelisk-linux-amd64 --output-document=bazelisk
     - name: Build with Bazel
       run: USE_BAZEL_VERSION=3.7.0 bazelisk build //...
-      env:
-        ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
     - name: Test with Bazel
-      run: USE_BAZEL_VERSION=3.7.0 bazelisk test //...
-      env:
-        ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
+      run: USE_BAZEL_VERSION=3.7.0 bazelisk test //... --config headless
