--- a/domain/BUILD.bazel
+++ b/domain/BUILD.bazel
@@ -1,25 +1,5 @@
 load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
 load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
-load("@rules_android//android:rules.bzl", "android_library")
-load("@rules_java//java:defs.bzl", "java_import")
-
-java_import(
-    name = "jvm-toxcore-c",
-    jars = [
-        "@jvm-toxcore-c//:jvm-toxcore-c.jar",
-        "@jvm-toxcore-api//:jvm-toxcore-api.jar",
-        "@jvm-toxcore-api//:libjvm-toxcore-api-java.jar",
-    ],
-    deps = ["@maven//:org_scala_lang_scala_library"],
-)
-
-android_library(
-    name = "tox4j",
-    exports = [
-        ":jvm-toxcore-c",
-        "@jvm-toxcore-c//:libtox4j-c.so",
-    ],
-)
 
 kt_android_library(
     name = "domain",
@@ -27,8 +7,8 @@ kt_android_library(
     custom_package = "ltd.evilcorp.domain",
     visibility = ["//visibility:public"],
     deps = [
-        ":tox4j",
         "//core",
+        "@jvm-toxcore-c",
         "@maven//:androidx_core_core_ktx",
     ],
 )
