--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -64,6 +64,7 @@ tox4j-android-i686 = { module = "org.toktok:tox4j-c_i686-linux-android", version
 tox4j-android-amd64 = { module = "org.toktok:tox4j-c_x86_64-linux-android", version.ref = "tox4j-android" }
 tox4j-api = { module = "org.toktok:tox4j-api_2.11", version.ref = "tox4j-core" }
 tox4j-c = { module = "org.toktok:tox4j-c_2.11", version.ref = "tox4j-core" }
+tox4j-blessed = { module = "org.toktok:tox4j-c", version = "0.3.0" }
 
 test-espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "espresso" }
 test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
